--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.6
   get: ^4.6.6
+  http: ^1.2.2
+  get_storage: ^2.1.1
+  cached_network_image: ^3.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +24,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/images/MainIcons/
+    - assets/gifs/
