--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cached_network_image: ^3.2.1
   intl: ^0.19.0
   rename_app: ^1.6.1
+  art_sweetalert: ^0.0.5
 
 dev_dependencies:
   flutter_test:
