--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.19.0
   rename_app: ^1.6.1
   art_sweetalert: ^0.0.5
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
