Student Official Engaged Module Done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   rename_app: ^1.6.1
   art_sweetalert: ^0.0.5
   expandable: ^5.0.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
