--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   expandable: ^5.0.1
   url_launcher: ^6.3.1
   connectivity_plus: ^6.1.0
+  hugeicons: ^0.0.7
 
 dev_dependencies:
   flutter_test:
@@ -33,8 +34,6 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/images/AppIcon/
-    - assets/images/MainIcons/
     - assets/images/Exception/
     - assets/gifs/
   fonts:
