--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,6 +7,13 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
+analyzer:
+  errors:
+    non_constant_identifier_names: ignore
+    deprecated_member_use: ignore
+    file_names: ignore
+    unrelated_type_equality_checks: ignore
+    avoid_unnecessary_containers: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
